# rbac-agent

./: .env.example  .gitignore  Dockerfile  README.md  check_import.py  non_ascii.txt  pyproject.toml  requirements.txt  streamlit_app.py
app/: main.py
app/schemas/: chat.py
app/services/: cache.py  llm_service.py  metrics.py  query_classifier.py  rag_service.py  reranker.py  role_manager.py  sql_service.py
tests/: test_analytics_endpoint.py  test_cache_service.py  test_chat_endpoint.py  test_query_classifier.py  test_sql_service.py
tools/: architecture.mmd  offline_eval.py
